# aloam

./: .gitignore  CMakeLists.txt  README.md  aloam_manager.cpp  package.xml  plugins.xml
cfg/: aloam_dynparam.cfg
config/: aloam.yaml  aloam_rosbag.yaml  feature_selection.yaml  sensor.yaml  topics_aloam.yaml
config/plotjuggler/: pltjuggler.xml
include/aloam_slam/: common.h  feature_extractor.h  feature_extractor_impl.h  feature_extractor_impl.hpp  feature_selection.h  lidarFactor.hpp  mapping.h  odometry.h
install/: install.sh  install.sh.orig
jupyter/: edge_plane_residuals.ipynb
launch/: aloam.launch  aloam_rosbag.launch  aloam_velodyne_HDL_32.launch  aloam_velodyne_HDL_64.launch  aloam_velodyne_VLP_16.launch  map_builder.launch  ouster_16.launch  ouster_64.launch  ouster_64_odometry.launch  ouster_64_odometry_rosbag.launch  ouster_standalone.launch  rosbag.launch  uav.launch  uav_os.launch  uav_os1.launch  uav_os1_standalone.launch  uav_os_standalone.launch  velodyne_odometry_simulation.launch
launch/obsolete/: darpa2019.launch  ouster_64.launch  velodyne_16_odometry.launch
msg/: AloamDiagnostics.msg  FeatureExtractionDiagnostics.msg  FeatureSelectionDiagnostics.msg  FeaturesSignature.msg  MappingDiagnostics.msg  OdometryDiagnostics.msg  Signature.msg
rviz/: uav1.rviz  uav1_features.rviz  uav3.rviz  uav68_features.rviz
scripts/: online_histogram.py
src/: aloam.cpp  aloam_rosbag.cpp  feature_extractor.cpp  feature_selection.cpp  laserMapping.cpp  laserOdometry.cpp  mapping.cpp  odometry.cpp  scanRegistration.cpp
